# genai_learning_sri

./: .gitignore  README.md  python_learning.py  requirements_list2.txt
ContextEngineering/: .gitignore  CONCEPTS.md  PRESENTATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  config.example.json  main_demo.py  requirements.txt  run_demo.py  simple_demo.py  test_demo.py
ContextEngineering/.claude/: settings.local.json
ContextEngineering/demos/: 1_context_write.py  2_context_select.py  3_context_compress.py  4_context_isolate.py
ContextEngineering/utils/: __init__.py  token_counter.py  visualizer.py
KG_RAG_DEMO_SAMPLE/: .gitignore  FAQ.txt  kg_rag.py  main.py
KG_RAG_SIMPLE_DEMO/: .gitignore  kg_rag.py  pyproject.toml  requirements.txt
Knowledge_Graph_RAG/: .env.example  .gitignore  TROUBLESHOOTING.md  demo.py  docker-compose.yml  setup.bat  setup.sh
LANGCHAIN_PROJECTS/: .gitignore
LANGCHAIN_PROJECTS/code_assistant/: .gitignore  README.md  app.py  app_code_assistant.py
LANGCHAIN_PROJECTS/cover_letter/: app.py
LANGCHAIN_PROJECTS/genai-data-copilot/: README.md  app.py  config.py  data_loader.py  doc_loader.py  graph_engine.py  llm_engine.py  memory.py  prompt_engine.py  rag_engine.py  search_engine.py
LANGCHAIN_PROJECTS/mock_interview/: app.py
LANGCHAIN_PROJECTS/my_langchain_project/: README.md  app.py
UI_AUTOMATION/: desktop_automation.py  get_coordinates.py  notepad_automation.py  notepad_automation_flask.py
env_sri/: pyvenv.cfg
env_sri/Scripts/: activate  (+1 more)
python_code_learning/: notes.txt  notes_comments.txt
(+106 files in other folders)
