[project]
name = "kg-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2024.0.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-neo4j>=0.7.0",
    "langchain-openai>=1.1.11",
    "neo4j>=6.1.0",
    "python-dotenv>=1.2.2",
]
